docs/examples/xslt-guide/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: world-cities-soap-service
  labels:
      app: world-cities-soap-service
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
      app: world-cities-soap-service
